# nomotic-ci

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  action.yml  entrypoint.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/basic/: nomotic.yaml
examples/fintech/: nomotic.yaml
examples/healthcare/: nomotic.yaml
src/nomotic_ci/: __init__.py  adversarial_runner.py  bundle_generator.py  compound_authority.py  config_loader.py  config_validator.py  drift_checker.py  outputs.py  reporter.py
src/nomotic_ci.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_adversarial_runner.py  test_bundle_generator.py  test_compound_authority.py  test_config_loader.py  test_config_validator.py  test_drift_checker.py  test_integration.py  test_reporter.py
